# hermes

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: chore.md  feat.md  fix.md
hermes/: __main__.py  bot.py  main.py  web.py
src/: bot.py  main.py  web.py
src/hermes/: __main__.py  bot.py  main.py  web.py
src/hermes/formatters/: formatter.py  github.py
