[project]
name = "hermes"
authors = [
    {name = "Jared Peterson"},
]
version = "0.0.1"
description = "A flask based webhook bot"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mattermost", "webhooks", "web", "github"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask == 3.0.2",
    "mattermostdriver == 7.3.2",
    "pyyaml == 6.0.1",
    "waitress == 3.0.0"
]


[project.scripts]
hermes = "hermes.__main__:main"


[project.optional-dependencies]
dev = [
    "flask ~= 3.0",
    "mattermostdriver ~= 7.3",
    "pyyaml ~= 6.0",
    "waitress ~= 3.0"
]

build = [
   "wheel ~= 0.42",
   "build ~= 1.1"
]


[tool.distutils.bdist_wheel]
universal = true